--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,10 +1,14 @@
+html {
+  background-color: #261d19;
+  border-top: 5px solid#92c944; }
+
 body {
-  background-color: #4b7399;
-  font-family: Verdana, Helvetica, Arial;
+  background-color: #261d19;
+  font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
   font-size: 14px; }
 
 a {
-  color: #0000FF; }
+  color: #0066ff; }
   a img {
     border: none; }
 
@@ -13,13 +17,108 @@ a {
   height: 0;
   overflow: hidden; }
 
+#wrap {
+  width: 889px;
+  margin: 0 auto; }
+
+#title {
+  float: left;
+  color: white;
+  margin-bottom: 10px; }
+  #title h1 {
+    margin: 0;
+    padding: 0; }
+  #title a {
+    background: #261d19 url(/images/following-logo.png) no-repeat top left;
+    display: block;
+    height: 67px;
+    width: 256px;
+    text-indent: -9999px; }
+
+#tagline {
+  float: right;
+  width: 40%; }
+  #tagline h2 {
+    padding-top: 10px;
+    color: #db5180;
+    font-size: 0.85em; }
+
 #container {
-  width: 75%;
-  margin: 0 auto;
-  background: #fff;
+  background: #efefeb;
   padding: 20px 40px;
   border: solid 1px black;
-  margin-top: 20px; }
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em; }
+
+#search_form {
+  margin-bottom: 1em; }
+  #search_form p {
+    font-size: 24px;
+    color: #333333;
+    margin: 0 0 1em 0;
+    padding: 0; }
+  #search_form .name_input {
+    height: 24px;
+    padding: 4px;
+    font-size: 20px;
+    background-color: white;
+    border: 1px solid #cdc7b7;
+    margin-right: 1em; }
+  #search_form .search_submit {
+    padding: 4px;
+    font-size: 18px; }
+
+input[type=submit], input[type=button], .search_submit {
+  border: 1px solid#a81e4d;
+  background-color: #db5180;
+  color: white;
+  -moz-border-radius: 0.3em;
+  -webkit-border-radius: 0.3em;
+  border-radius: 0.3em;
+  cursor: pointer; }
+
+#user_info p {
+  font-size: 18px;
+  margin: 0;
+  color: #333333; }
+#user_info .name {
+  font-size: 24px;
+  font-weight: bold; }
+#user_info .count {
+  color: #db5180; }
+
+.sort_options {
+  float: right; }
+  .sort_options ul {
+    margin: 5px 0;
+    padding: 0;
+    list-style-type: none;
+    list-style-position: outside;
+    list-style-image: none; }
+    .sort_options ul li {
+      display: block;
+      float: left;
+      margin: 0;
+      padding: 0 0 0 1em;
+      list-style-type: none;
+      list-style-position: outside;
+      list-style-image: none; }
+
+#tweeps {
+  margin-top: 1em;
+  border-top: 2px solid #db5180; }
+  #tweeps .tweep {
+    margin: 1em 0;
+    padding-bottom: 1em;
+    border-bottom: 2px solid #db5180;
+    overflow: hidden; }
+    #tweeps .tweep .avatar {
+      width: 48px;
+      height: 48px;
+      float: left; }
+    #tweeps .tweep .details {
+      padding-left: 58px; }
 
 #flash_notice,
 #flash_error {
