--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -59,17 +59,28 @@ a {
     margin: 0 0 1em 0;
     padding: 0; }
   #search_form .name_input {
+    float: left;
     height: 24px;
     padding: 4px;
     font-size: 20px;
     background-color: white;
     border: 1px solid #cdc7b7;
     margin-right: 1em; }
-  #search_form .search_submit {
+  #search_form .filter {
+    float: left;
+    margin-right: 1em;
+    font-size: 20px;
+    padding: 4px;
+    height: 38px;
+    width: 250px; }
+  #search_form .search_submit, #search_form .loading_button {
+    float: left;
+    text-align: center;
+    width: 200px;
     padding: 4px;
     font-size: 18px; }
 
-input[type=submit], input[type=button], .search_submit {
+input[type=submit], input[type=button], .search_submit, .loading_button {
   border: 1px solid#a81e4d;
   background-color: #db5180;
   color: white;
@@ -78,15 +89,39 @@ input[type=submit], input[type=button], .search_submit {
   border-radius: 0.3em;
   cursor: pointer; }
 
-#user_info p {
-  font-size: 18px;
-  margin: 0;
-  color: #333333; }
-#user_info .name {
-  font-size: 24px;
-  font-weight: bold; }
-#user_info .count {
-  color: #db5180; }
+#user_info {
+  margin-top: 1em; }
+  #user_info p {
+    font-size: 18px;
+    margin: 0;
+    color: #333333; }
+  #user_info .name {
+    position: relative;
+    bottom: -1px;
+    padding: 5px 5px 0 5px;
+    font-size: 24px;
+    font-weight: bold;
+    background: #F4F1EA;
+    -moz-border-radius: 0.5em 0.5em 0 0;
+    -webkit-border-radius: 0.5em 0.5em 0 0;
+    border-radius: 0.5em 0.5em 0 0;
+    border: 1px solid #C7C0AF;
+    border-bottom: none; }
+  #user_info em {
+    text-decoration: none;
+    font-style: normal;
+    color: #db5180; }
+  #user_info .metadata {
+    padding: 5px;
+    background: #F4F1EA;
+    border: 1px solid #C7C0AF; }
+
+#map_container {
+  display: none;
+  margin: 1em 0;
+  height: 400px;
+  width: 100%;
+  border: 1px solid #CDC7B7; }
 
 .sort_options {
   float: right; }
@@ -105,6 +140,23 @@ input[type=submit], input[type=button], .search_submit {
       list-style-position: outside;
       list-style-image: none; }
 
+.help_balloon {
+  margin-top: 4px; }
+
+#tooltip {
+  padding: 15px;
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em; }
+  #tooltip div.body {
+    margin-top: 1em; }
+
+#spinner {
+  display: none;
+  text-align: center;
+  font-size: 28px;
+  margin-top: 1em; }
+
 #tweeps {
   margin-top: 1em;
   border-top: 2px solid #db5180; }
@@ -117,8 +169,32 @@ input[type=submit], input[type=button], .search_submit {
       width: 48px;
       height: 48px;
       float: left; }
+      #tweeps .tweep .avatar img {
+        width: 48px;
+        height: 48px; }
     #tweeps .tweep .details {
       padding-left: 58px; }
+      #tweeps .tweep .details .since {
+        font-size: 0.75em; }
+    #tweeps .tweep .klout {
+      float: right;
+      text-align: center;
+      font-size: 28px;
+      margin-left: 1em; }
+      #tweeps .tweep .klout .klout_header {
+        font-size: 16px;
+        border-bottom: 1px solid#333333; }
+    #tweeps .tweep .follow_cost {
+      float: right;
+      font-size: 12px;
+      margin-left: 1em;
+      margin-bottom: 1em; }
+      #tweeps .tweep .follow_cost h3 {
+        margin: 0 0 5px 0;
+        padding: 0;
+        font-weight: normal;
+        font-size: 16px;
+        border-bottom: 1px solid#333333; }
 
 #flash_notice,
 #flash_error {
