--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -62,17 +62,28 @@ a
     :margin 0 0 1em 0
     :padding 0
   .name_input
+    :float left
     :height 24px
     :padding 4px
     :font-size 20px
     :background-color= !white
     :border= 1px solid #CDC7B7
     :margin-right 1em
-  .search_submit
+  .filter
+    :float left
+    :margin-right 1em
+    :font-size 20px
+    :padding 4px
+    :height 38px
+    :width 250px
+  .search_submit, .loading_button
+    :float left
+    :text-align center
+    :width 200px
     :padding 4px
     :font-size 18px
 
-input[type=submit], input[type=button], .search_submit
+input[type=submit], input[type=button], .search_submit, .loading_button
   :border= "1px solid" + (!pink - #333333)
   :background-color= !pink
   :color= !white
@@ -82,16 +93,39 @@ input[type=submit], input[type=button], .search_submit
   :cursor pointer
 
 #user_info
+  :margin-top 1em
   p
     :font-size 18px
     :margin 0
     :color= !black
   .name
+    :position relative
+    :bottom -1px
+    :padding 5px 5px 0 5px
     :font-size 24px
     :font-weight bold
-  .count
+    :background #F4F1EA
+    :-moz-border-radius 0.5em 0.5em 0 0
+    :-webkit-border-radius 0.5em 0.5em 0 0
+    :border-radius 0.5em 0.5em 0 0
+    :border 1px solid #C7C0AF
+    :border-bottom none
+  em
+    :text-decoration none
+    :font-style normal
     :color= !pink
-    
+  .metadata
+    :padding 5px
+    :background #F4F1EA
+    :border 1px solid #C7C0AF
+
+#map_container
+  :display none
+  :margin 1em 0
+  :height 400px
+  :width 100%
+  :border 1px solid #CDC7B7
+
 .sort_options
   :float right
   ul
@@ -108,6 +142,24 @@ input[type=submit], input[type=button], .search_submit
       :list-style-type none
       :list-style-position outside
       :list-style-image none
+
+.help_balloon
+  :margin-top 4px
+
+#tooltip
+  :padding 15px
+  :-moz-border-radius 0.5em
+  :-webkit-border-radius 0.5em
+  :border-radius 0.5em
+  div.body
+    :margin-top 1em
+
+#spinner
+  :display none
+  :text-align center
+  :font-size 28px
+  :margin-top 1em
+  
 #tweeps
   :margin-top 1em
   :border-top= "2px solid " + !pink
@@ -120,8 +172,32 @@ input[type=submit], input[type=button], .search_submit
       :width 48px
       :height 48px
       :float left
+      img
+        :width 48px
+        :height 48px
     .details
       :padding-left 58px
+      .since
+        :font-size 0.75em
+    .klout
+      :float right
+      :text-align center
+      :font-size 28px
+      :margin-left 1em
+      .klout_header
+        :font-size 16px
+        :border-bottom= "1px solid" + !black
+    .follow_cost
+      :float right
+      :font-size 12px
+      :margin-left 1em
+      :margin-bottom 1em
+      h3
+        :margin 0 0 5px 0
+        :padding 0
+        :font-weight normal
+        :font-size 16px
+        :border-bottom= "1px solid" + !black
   
 #flash_notice,
 #flash_error
